[gd_scene load_steps=4 format=1]

[ext_resource path="res://Hud/Hud.gd" type="Script" id=1]
[ext_resource path="res://Hud/level1.png" type="Texture" id=2]
[ext_resource path="res://grid-movement/tilesets/tileset.tres" type="TileSet" id=3]

[node name="Node2D" type="Control"]

process/pause_mode = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="HUD" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 11.0
margin/right = 221.0
margin/bottom = 80.0

[node name="Name" type="Sprite" parent="HUD"]

transform/pos = Vector2( 35.1671, 34.9573 )
transform/scale = Vector2( 0.196045, 0.196045 )
texture = ExtResource( 2 )

[node name="HPOutline" type="ColorFrame" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 8.0
margin/right = 205.0
margin/bottom = 31.0
color = Color( 0.277344, 0.277344, 0.277344, 1 )

[node name="HPActual" type="ColorFrame" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 8.0
margin/right = 205.0
margin/bottom = 31.0
color = Color( 0.753906, 0, 0, 1 )

[node name="HPLabel" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 117.0
margin/top = 12.0
margin/right = 157.0
margin/bottom = 26.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MPOutline" type="ColorFrame" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 39.0
margin/right = 205.0
margin/bottom = 62.0
color = Color( 0.277344, 0.277344, 0.277344, 1 )

[node name="MPActual" type="ColorFrame" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 39.0
margin/right = 205.0
margin/bottom = 62.0
color = Color( 0, 0, 1, 1 )

[node name="MPLabel" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 117.0
margin/top = 43.0
margin/right = 157.0
margin/bottom = 57.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 94.0
margin/right = 67.0
margin/bottom = 114.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="ButtonAdd" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 131.0
margin/right = 67.0
margin/bottom = 151.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Character" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.77
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -4.0
margin/right = 1028.0
margin/bottom = 604.0

[node name="CharLabel" type="Label" parent="Character"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 474.0
margin/top = 12.0
margin/right = 514.0
margin/bottom = 26.0
text = "Character"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Inventory" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.77
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -4.0
margin/right = 1028.0
margin/bottom = 604.0

[node name="InvLabel" type="Label" parent="Inventory"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 474.0
margin/top = 12.0
margin/right = 534.0
margin/bottom = 26.0
text = "Inventory"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Map" type="Panel" parent="."]

visibility/visible = false
visibility/opacity = 0.77
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -4.0
margin/right = 1028.0
margin/bottom = 604.0

[node name="TilePanel" type="Panel" parent="Map"]

editor/display_folded = true
visibility/self_opacity = 0.0
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 41.5
margin/top = 45.0
margin/right = -8.5
margin/bottom = -11.0

[node name="TileMap" type="TileMap" parent="Map/TilePanel"]

transform/scale = Vector2( 0.2, 0.2 )
mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 64
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="MapLArrow" type="Label" parent="Map"]

rect/rotation = 180.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 44.0
margin/top = 581.0
margin/right = 55.0
margin/bottom = 595.0
text = ">"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapUArrow" type="Label" parent="Map"]

rect/rotation = 90.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 41.0
margin/top = 571.0
margin/right = 52.0
margin/bottom = 585.0
text = ">"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapRArrow" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 51.0
margin/top = 568.0
margin/right = 62.0
margin/bottom = 582.0
text = ">"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapDArrow" type="Label" parent="Map"]

rect/rotation = 270.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 54.0
margin/top = 578.0
margin/right = 65.0
margin/bottom = 592.0
text = ">"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapRText" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 63.0
margin/top = 568.0
margin/right = 107.0
margin/bottom = 582.0
text = "right"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapLText" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 568.0
margin/right = 36.0
margin/bottom = 582.0
text = "left"
align = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapUText" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 28.0
margin/top = 546.0
margin/right = 67.0
margin/bottom = 560.0
text = "up"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapDText" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 587.0
margin/right = 71.0
margin/bottom = 601.0
text = "down"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapZText" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 153.0
margin/top = 568.0
margin/right = 207.0
margin/bottom = 582.0
text = "space"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapZ" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 112.0
margin/top = 568.0
margin/right = 153.0
margin/bottom = 582.0
text = "zoom:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapLabel" type="Label" parent="Map"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 474.0
margin/top = 12.0
margin/right = 534.0
margin/bottom = 26.0
text = "Map"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Pause" type="Panel" parent="."]

visibility/visible = false
visibility/opacity = 0.77
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -394.0
margin/top = -146.0
margin/right = -606.0
margin/bottom = -386.0

[node name="PauseLabel" type="Label" parent="Pause"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 85.0
margin/top = 3.0
margin/right = 145.0
margin/bottom = 17.0
text = "Pause"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Btn_resume" type="Button" parent="Pause"]

focus_neighbour/top = NodePath("../Btn_quit_desktop")
focus_neighbour/bottom = NodePath("../Btn_options")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 52.0
margin/top = 35.0
margin/right = 155.0
margin/bottom = 71.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Pause/Btn_resume"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 103.0
margin/bottom = 36.0
text = "Resume"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Btn_options" type="Button" parent="Pause"]

focus_neighbour/top = NodePath("../Btn_resume")
focus_neighbour/bottom = NodePath("../Btn_quit_menu")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 83.0
margin/right = 155.0
margin/bottom = 119.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Pause/Btn_options"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 102.0
margin/bottom = 36.0
text = "Options"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Btn_quit_menu" type="Button" parent="Pause"]

focus_neighbour/top = NodePath("../Btn_options")
focus_neighbour/bottom = NodePath("../Btn_quit_desktop")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 132.0
margin/right = 155.0
margin/bottom = 168.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Pause/Btn_quit_menu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 102.0
margin/bottom = 36.0
text = "Quit to menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Btn_quit_desktop" type="Button" parent="Pause"]

focus_neighbour/top = NodePath("../Btn_quit_menu")
focus_neighbour/bottom = NodePath("../Btn_resume")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 180.0
margin/right = 155.0
margin/bottom = 216.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Pause/Btn_quit_desktop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 102.0
margin/bottom = 36.0
text = "Quit to Desktop"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="ButtonAdd" to="." method="_on_ButtonAdd_pressed"]

[connection signal="pressed" from="Pause/Btn_resume" to="." method="_on_Btn_resume_pressed"]

[connection signal="pressed" from="Pause/Btn_options" to="." method="_on_Btn_options_pressed"]

[connection signal="pressed" from="Pause/Btn_quit_menu" to="." method="_on_Btn_quit_menu_pressed"]

[connection signal="pressed" from="Pause/Btn_quit_desktop" to="." method="_on_Btn_quit_desktop_pressed"]


